loopfor.LoopFor.scala.error
Compilation error:
LoopFor:8: error: not found: value break
    break
    ^