loopfor.LoopFor.scala.code
for (i <- 0 to 5) {
  if (isOverBaggle()) {
    pickupBaggle()
    for (j <- 0 to i) {
      backward()
    }
    dropBaggle()
    break
  }
  else {
    forward()
  }
}